Fixed text going out of container, (word wrap)

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body{
     color: rgb(24, 40, 61);
     justify-content: space-between;
     white-space: pre-wrap;
+    word-wrap: break-word;
 }
 
 .note-footer{
